--- a/Elector website/css/style.css
+++ b/Elector website/css/style.css
@@ -1,67 +1,109 @@
 * {
-    margin:0px;
-    padding:0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 /* login page make background this design */
-.start{
+.start {
     background-image: url("../image/ElectionBackground.jpg");
     height: 100%;
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* make from lable */
-.form-label{
+.form {
     color: white;
 }
 
-.w-50{
+.w-50 {
     border-radius: 50px;
 }
 
-.w-400{
+.w-25{
+    border-radius: 25px;
+}
+
+#picture {
+    box-shadow: 3px 3px rgb(247, 112, 112);
+}
+
+.w-800 {
+    width: 800px;
+    max-width: 90%;
+}
+
+.w-400 {
     width: 400px;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(15px);
     border-radius: 50px;
 }
 
-.form-control{
-    border-color: rgb(255, 81, 6);
+.form-control {
+    border-color: rgb(255, 98, 31);
+    font-family: 'Courier New';
 }
 
-.form-control:hover{
-    border-color: rgb(80, 253, 0);
+.form-control:hover {
+    border-color: green;
 }
 
-.chunav{
+.chunav {
     color: rgb(255, 81, 6);
     font-weight: bolder;
 }
 
-.chunav:hover{
+.chunav:hover {
     color: rgb(80, 253, 0);
 }
 
-.w-15{
+.w-15 {
     width: 2cm;
 }
 
-.font{
-    color: black;
+.font {
+    color: white;
+    text-align: end;
     font-size: large;
 }
 
-.font:hover{
-    color: rgb(33, 92, 255);
+.font:hover {
+    color: rgb(74, 111, 215);
     font-family: monospace;
     font-size: large;
     text-decoration: underline;
 }
 
-.vh-75{
+.vh-75 {
     height: 75vh;
 }
+
+.hr {
+    color: black;
+}
+
+/* registration form css */
+.gradient-custom {
+    /* fallback for old browsers */
+    background-image: url("../image/ElectionBackground.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card-registration .select-input.form-control[readonly]:not([disabled]) {
+    font-size: 1rem;
+    line-height: 2.15;
+    padding-left: .75em;
+    padding-right: .75em;
+}
+
+.card-registration .select-arrow {
+    top: 13px;
+}
+
+
+/* complete */
