--- a/Elector website/css/style.css
+++ b/Elector website/css/style.css
@@ -65,6 +65,7 @@
 }
 
 .font {
+  color: white;
     text-align: end;
     font-size: large;
 }
@@ -165,7 +166,7 @@ body {
     div.content {margin-left: 0;}
   }
   
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: 000px) {
     .sidebar a {
       text-align: center;
       float: none;
