--- a/Elector website/css/style.css
+++ b/Elector website/css/style.css
@@ -124,10 +124,16 @@ body {
     width: 250px;
     background-color: #f1f1f1;
     position: fixed;
-    height: 100%;
+    height: 91%;
     overflow: auto;
   }
-  
+
+  .logout{
+    position: absolute;
+    bottom: 0px;
+    width: 250px;
+  }
+
   .sidebar a {
     display: block;
     color: black;
@@ -154,11 +160,12 @@ body {
   @media screen and (max-width: 700px) {
     .sidebar {
       width: 100%;
-      height: auto;
+      max-height: 30vh;
+      /* min-height: 30vh; */
       position: relative;
     }
     .fixed{
-        width: 100%;
+      width: 100%;
       height: auto;
       position: relative;
     }
